tests/valid/definite/ListGenerator_Valid_3.whiley
void f([int] x):
     print str(|x|)

void System::main([string] args):
     arr = []
     f(arr)
