tests/invalid/simple/SetEmpty_CompileFail_1.whiley
void f(int x):
    print str(x)

void System::main([string] args):
    f({})
